# EmbedTalk

./: .env  .env.development  .env.production  .gitignore  README.md  README_CN.md  build.ps1  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  update-manifest.js  vite.config.ts
.github/workflows/: release.yml
.workflow/: pipeline-20241008.yml
deploy/: nginx.conf
scripts/: deploy_embedtalk.sh  deploy_nginx.sh  deploy_update.sh  start_backend_dev.sh
src/: App.tsx  heroicons.d.ts  index.css  layout.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/resources/protocolconfig/: CSG13.xml  CSG16.xml  MOUDLE.xml  TASK_MS.xml
src-tauri/src/: global.rs  main.rs  web.rs
src-tauri/src/basefunc/: frame_645.rs  frame_cco.rs  frame_csg.rs  frame_err.rs  frame_fun.rs  frame_moudle.rs  frame_speecial.rs  frame_tctask.rs  mod.rs  protocol.rs
src-tauri/src/combridage/: bluetooth.rs  commanger.rs  messagemanager.rs  mod.rs  mqtt.rs  serial_port.rs  tcp_client.rs  tcp_server.rs
src-tauri/src/config/: appconfig.rs  constants.rs  mod.rs  oadmapconfig.rs  xmlconfig.rs
src-tauri/src/global/: mod.rs
src-tauri/src/protocol/: channel_adapter.rs  channel_handler.rs  manager.rs  mod.rs  traits.rs
src-tauri/src/protocol/dlt645/: builder.rs  mod.rs  parser.rs
src-tauri/src/protocol/modbus/: builder.rs  mod.rs  parser.rs
src-tauri/src/taurihandler/: ChannelHandler.rs  channel_handler.rs  dlt645_handler.rs  handler.rs  mod.rs  protocol_handler.rs
src/api/: desktop.ts  index.ts  types.ts  web.ts
src/assets/icons/: icon.icns
src/assets/locales/: fieldDefinitions.json
src/components/: AboutDialog.tsx  ConfirmDialog.tsx  CustomTitleBar.tsx  DLT645TestWindow.tsx  FileTabs.tsx  FrameExtractor.tsx  HistoryDrawer.tsx  IPInput.tsx  Icons.tsx  ItemConfigRow.tsx  LogContent.tsx  LogContextMenu.tsx  LogFilter.tsx  MessageSender.tsx  MonacoEditor.tsx  QuickParseWindow.tsx  SettingsDrawer.tsx  ShortcutInput.tsx  SimpleIPInput.tsx  TaskAnalysis.tsx  ThemeControl.tsx  ToolDialog.tsx  TreeItem.tsx  TreeTable.tsx  UpdateConfirmDialog.tsx  UpdateProgress.tsx  VirtualLogList.tsx  alert.tsx  close_config.tsx  collapse.tsx  dialog.tsx  highlighteredit.tsx  progress.tsx  serachlist.tsx  toast.tsx  treeview.tsx  xmlconvert.tsx  xmltree.tsx
src/components/channels/: ChannelContent.tsx  ChannelHeader.tsx  ChannelList.tsx  ClientList.tsx  MessageList.tsx  MessageSender.tsx
src/components/frameExtractor/: AddEditMessageDialog.tsx  ContextMenu.tsx  FilterBadge.tsx  FilterPanel.tsx  FrameExtractorPage.tsx  FrameTable.tsx  MessageDialog.tsx  index.ts
src/components/frames/: ExportDialog.tsx  ExportProgressDialog.tsx  FileCloseConfirmDialog.tsx  FileTabs.tsx  FrameContent.tsx  FrameContextMenu.tsx  FrameEntryRow.tsx  FrameFilter.tsx  FrameTableHeader.tsx  VirtualFrameList.tsx
src/components/logsprase/: FileTabs.tsx  LogContent.tsx  LogContextMenu.tsx  LogFilter.tsx  VirtualLogList.tsx
src/components/settings/: TraySettings.tsx
src/components/tools/: BitPositionCalculatorTool.tsx  ByteConverterTool.tsx  DataItemParserTool.tsx  HelpContent.tsx  MeasurementPointsTool.tsx  PPPFCS16Tool.tsx  TimeConverterTool.tsx  ToolCard.tsx  (+3 more)
src/context/: PlatformProvider.tsx  SettingsProvider.tsx  ShortcutProvider.tsx  TauriProvider.tsx  ToastProvider.tsx  TrayProvider.tsx  UpdateProvider.tsx
src/hooks/: useConfig.ts  useDbWorker.ts  useDebounce.ts  useFrameParseWindows.ts  useParseProgress.ts  useSettings.ts  useThemeEffect.ts  useTrayManager.ts  useWindowCloseHandler.ts
src/lib/: utils.ts
src/routes/: ChannelMonitor.tsx  ChannelMonitorRedux.tsx  FrameView.tsx  dlt645-test.tsx  file-parse.tsx  frame-extractor.tsx  frame-parse.tsx  home.tsx  itemconfig.tsx  log-parse.tsx  quick-parse.tsx  settings.tsx  task-analysis.tsx  tools.tsx
src/services/: channelService.ts  fileHandler.ts  frameExtractorService.ts  frameParser.ts  logParser.ts  settingService.ts  trayService.ts  updaterService.ts
src/settingcomplent/: ConnectBridgeRedux.tsx  Devtools.tsx  about.tsx  closeSetting.tsx  connectbridge.tsx  protocolpath.tsx  region.tsx  report.tsx  shortcut.tsx  theme.tsx  updateSetting.tsx
src/store/: hooks.ts  index.ts  store.ts
src/stores/: useChannelStore.ts  useCombinedStore.ts  useConnectStore.ts  useFrameAnalysicStore.ts  useItemConfigStore.ts  useTreeViewStore.ts
src/types/: channel.ts  config.ts  frameTypes.ts  settings.ts
src/utils/: database.ts  date.ts  frameUtils.ts  platform.ts  region.ts  themes.ts  trayIcons.ts
src/webworkers/: imageworker.js  saveimage.js
src/workers/: database.worker.ts  excelWorker.ts  frameParser.worker.ts  logParser.worker.ts
(+20 files in other folders)
