[package]
name = "EmbedTalk"
version = "0.0.1"
description = "EmbedTalk"
authors = ["zerojack"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0", features = ["config-json5"] }

[profile.dev]
debug = true

[profile.release]
debug = true

[dependencies]
tauri = { version = "2.0.0", features = [ "macos-private-api", "tray-icon", "config-json5"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fluent = "0.14"
fluent-bundle = "0.14"
quick-xml = "0.22"
lazy_static = "1.4"
regex = "1"
hex = "0.4"
chrono = "0.4"
num-derive = "0.3"
num-traits = "0.2"
erased-serde = "0.3"
toml="0.5"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
time = "=0.3.36"  # 明确指定版本
backtrace = "0.3"
rayon = "1.5"
btleplug = "0.10"
bincode = "1.3"
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
rumqttc = "0.15"
tokio-serial = "5.0"
socket2 = "0.4"
once_cell = "1.17"
tauri-plugin-os = "2.0.1"
tauri-plugin-shell = "2.0.1"
tauri-plugin-fs = "2.0.1"
tauri-plugin-dialog = "2.0.1"
tauri-plugin-clipboard-manager = "2.0.1"
dirs-next = "2.0"
serde_yaml = "0.9"
tauri-plugin-theme = "2.1.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
